// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree should mount correctly 1`] = `
<TreeFile
  className=""
  level={0}
  name="package.json"
  parentPath=""
/>
`;

exports[`Tree should mount correctly 2`] = `
<TreeFolder
  className=""
  level={0}
  name="components"
  parentPath=""
/>
`;

exports[`Tree should mount correctly 3`] = `ReactWrapper {}`;
